--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "math": "^0.0.3",
     "sqlite3": "^5.1.6",
     "telegraf": "^4.14.0"
   }
